添加主页按钮

--- a/SayNopa_wx_tool/SayNopa_Wechat_tool/pages/main/main.wxml
+++ b/SayNopa_wx_tool/SayNopa_Wechat_tool/pages/main/main.wxml
@@ -16,4 +16,12 @@
  </modal>
 
 
+<view class='option'>
+    <button class='button_c'><image mode='widthFix'  src='../../img/main/nopa_speech.png'></image><view>语音诊断</view></button>
+</view>
+<view class='option'>
+    <button class='button_c'><image mode='widthFix'  src='../../img/main/nopa_face.png'></image><view>面部诊断</view></button>
+</view>
+
+
 
