--- a/SayNopa_wx_tool/SayNopa_Wechat_tool/pages/main/main.wxss
+++ b/SayNopa_wx_tool/SayNopa_Wechat_tool/pages/main/main.wxss
@@ -18,3 +18,19 @@ Page {
   font-size: 10px;
 }
 
+
+
+.option {
+  margin-top: 10%;
+  margin: 10%; 
+  /* margin-right:100px;  */
+}
+.option image {
+ width: 100%;
+ /* padding: px; */
+}
+.button_c {
+  width: 100%;
+  border-radius: 5px;
+  box-shadow: 0 0 5px black;
+}
