--- a/SayNopa_wx_tool/SayNopa_Wechat_tool/pages/face/face.wxss
+++ b/SayNopa_wx_tool/SayNopa_Wechat_tool/pages/face/face.wxss
@@ -1,6 +1,10 @@
 page{
   height: 100%;
 }
+.user {
+  text-align: center;
+}
+
 .view{
   width: 100%;
   height: 90%;
@@ -23,11 +27,12 @@ page{
 .btn_open{
   width: 40%;
   float: left;
-  margin-left: 5%;
+  margin-left: 2%;
+
 }
 .btn_close{
   width: 40%;
-  margin-right: 5%;
+  margin-right: 9%;
   float: right;
 }
 .image{
@@ -45,14 +50,17 @@ page{
   align-items: center;
   text-align:center; 
   font-weight:700;
-  font-size: 14px;
+  font-size: 17px;
   margin-top: 5%;
+  position: absolute;
+
 }
 
 .window{
   width: 100%;
-  height: 85%;
-  margin-top: 5%;
+  height: 75%;
+  margin-top: 1%;
+  position: relative;
   /* background-color:red; */
 }
 
@@ -63,13 +71,19 @@ page{
   top: -100%;
   /* z-index: -1; */
 }
-button{
-  margin: 0 10rpx;
-  width: 100%;
-}
+/* button{
+  box-shadow: 0px 0px 5px black;
+} */
 .myCanvas{
   width: 99%;
   height:100%;
   border: 1px solid red;
 }
+
+.s_btn{
+  box-shadow: 0px 0px 5px black;
+}
  
+.diagnosebtn {
+  background-color: #3ed3ca;
+}
