--- a/SayNopa_wx_tool/SayNopa_Wechat_tool/pages/face/face.wxss
+++ b/SayNopa_wx_tool/SayNopa_Wechat_tool/pages/face/face.wxss
@@ -44,15 +44,19 @@ page{
 .face_pos{
   width: 100%;
   height: 0%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* justify-content: center; */
+  /* align-items: center; */
   text-align:center; 
   font-weight:700;
   font-size: 17px;
   margin-top: 5%;
   position: absolute;
+  background-color: #fff;
+ 
+  /* opacity: 0.50; 
+   filter: alpha(opacity=50); */
 
 }
 
